cloudapi/v2: expose ostree contenturl and rhsm options
